--- a/STM32CubeIDE/.project
+++ b/STM32CubeIDE/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>pendant2021-stm32wl</name>
+	<name>lorawan-stm32wl</name>
 	<comment></comment>
 	<projects>
 	</projects>
