Fix cmake build.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,7 @@ include_directories(STM32CubeIDE/Utilities/timer)
 include_directories(STM32CubeIDE/Utilities/trace/adv_trace)
 include_directories(STM32CubeIDE/Utilities/misc)
 include_directories(STM32CubeIDE/Middlewares/Third_Party/SubGHz_Phy)
+include_directories(STM32CubeIDE/Middlewares/Third_Party/SubGHz_Phy/stm32_radio_driver)
 include_directories(STM32CubeIDE/Middlewares/Third_Party/LoRaWAN/LmHandler)
 include_directories(STM32CubeIDE/Middlewares/Third_Party/LoRaWAN/LmHandler/Packages)
 include_directories(STM32CubeIDE/Middlewares/Third_Party/LoRaWAN/Crypto)
