Experimental clang support.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -121,13 +121,30 @@ endif()
 include_directories(${CMAKE_BINARY_DIR})
 configure_file("${PROJECT_SOURCE_DIR}/version.h.in" "${CMAKE_BINARY_DIR}/version.h" @ONLY)
 
-if(NOT CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-    message(FATAL_ERROR "Compiler must be GCC.")
-endif(NOT CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+include(./utils.cmake)
 
-if(CMAKE_CXX_COMPILER_VERSION LESS "10.2")
-    message(FATAL_ERROR "GCC must be version 10.2 or higher.")
-endif(CMAKE_CXX_COMPILER_VERSION LESS "10.2")
+if("${CMAKE_C_COMPILER_ID}" STREQUAL "Clang")
+    include(./clang_utils.cmake)
+    clang_utils_get_arm_gcc_version(${ARM_GCC_C_COMPILER})
+    clang_utils_get_arm_gcc_sysroot(${ARM_GCC_C_COMPILER} ${CC_FLAGS})
+    clang_utils_get_arm_gcc_multilib_dir(${ARM_GCC_C_COMPILER} ${CC_FLAGS})
+    clang_utils_get_arm_gcc_lib_dir(${ARM_GCC_C_COMPILER} ${CC_FLAGS})
+    clang_utils_get_arm_gcc_crt(${ARM_GCC_SYSROOT} ${ARM_GCC_MULTIDIR} ${ARM_GCC_LIBGCC_DIR})
+    string(APPEND CMAKE_EXE_LINKER_FLAGS" -nostdlib -L${ARM_GCC_SYSROOT}/lib/${ARM_GCC_MULTIDIR} -L${ARM_GCC_LIBGCC_DIR}")
+    string(APPEND CMAKE_EXE_LINKER_FLAGS " -lgcc -lnosys -lc")
+	include_directories(${ARM_GCC_SYSROOT}/include/c++/${ARM_GCC_VERSION})
+	include_directories(${ARM_GCC_SYSROOT}/include/c++/${ARM_GCC_VERSION}/arm-none-eabi/${ARM_GCC_MULTIDIR})
+	if(ARM_GCC_VERSION LESS "10.2")
+		message(FATAL_ERROR "GCC must be version 10.2 or higher.")
+	endif(ARM_GCC_VERSION LESS "10.2")
+else()
+	if(NOT CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+		message(FATAL_ERROR "Compiler must be GCC.")
+	endif(NOT CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+	if(CMAKE_CXX_COMPILER_VERSION LESS "10.2")
+		message(FATAL_ERROR "GCC must be version 10.2 or higher.")
+	endif(CMAKE_CXX_COMPILER_VERSION LESS "10.2")
+endif()
 
 target_compile_definitions(${PROJECT_NAME}.elf PRIVATE ${DEFINITIONS})
 target_compile_options(${PROJECT_NAME}.elf PRIVATE ${CC_FLAGS})
