--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "cmake.configureSettings": {
-        "CMAKE_TOOLCHAIN_FILE": "../arm-gcc-toolchain.cmake",
+        "CMAKE_TOOLCHAIN_FILE": "../cmake/arm-gcc-toolchain.cmake",
         "TESTING" : true,
         "CMAKE_BUILD_TYPE" : "Debug"
     },
